--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -42,12 +42,6 @@ body {
     position: relative;
     width: 500%;
     height: 100%;
-    /* left: -5060px; */
-    /* transition: left 2s ease-out; */
-    /* -webkit-transition: left 1s ease-out; */
-    /* -moz-transition: left 2s ease-out; */
-    /* -ms-transition: left 2s ease-out; */
-    /* -o-transition: left 2s ease-out; */
 }
 
 
@@ -56,8 +50,7 @@ body {
     font-family: 'Source Sans Pro';
     font-size: 30pt;
     text-align: center;
-    color: #9C9C9C;
-    margin-top: 75px;
+    color: #9f9a96;
     left: 10%;
     margin-left: -450px;
     position: relative;
@@ -116,16 +109,68 @@ body {
 
 #about-title {
     top: 7.5%;
-    color: #9C9C9C;
+    color: #9f9a96;
     font-size: 30pt;
     text-align: center;
 }
 
 #about-text {
     top: 10%;
-    color: #7C7C7C;
+    color: #323232;
     font-size: 12pt;
     text-align: left;
+}
+
+#products {
+    position: absolute;
+    width: 1000px;
+    height: 330px;
+    left: 50%;
+    margin-left: -500px;
+}
+
+.kreis {
+    position: absolute;
+    background-image: url('Produkte/Kreis_ruhe.png');
+    background-repeat: no-repeat;
+    background-size: 210px;
+    width: 210px;
+    height: 210px;
+    z-index: 1000;
+}
+#kreis1 {
+    left: 7.5%;
+    /* background-image: url('Produkte/Kreis_aktiv.png'); */
+}
+
+#kreis2 {
+    left: 37.5%;
+}
+
+#kreis3 {
+    left: 67.5%;
+}
+
+.product {
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: 150px;
+    width: 150px;
+    height: 150px;
+    margin: 30px 30px;
+    z-index: 10;
+}
+
+#alge {
+    background-image: url('Produkte/Alge.png');
+}
+
+#auster {
+    background-image: url('Produkte/Auster.psd');
+}
+
+#salz {
+    background-image: url('Produkte/Salz.png');
 }
 
 #impressum {
@@ -144,7 +189,7 @@ body {
     height: 100%;
     position: absolute;
     font-family: 'Source Sans Pro';
-    color: #7C7C7C;
+    color: #323232;
     font-size: 15pt;
     text-align: left;
 }
@@ -154,16 +199,15 @@ body {
 }
 
 #nav {
-    position: fixed;
     z-index: 2000;
-    width: 100%;
+    width: 610px;
     margin-top: 10px;
+    margin: auto;
 }
 
 #nav ul {
-    width: 700px;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0px;
+    list-style: none;
 }
 
 #nav-line {
@@ -174,57 +218,77 @@ body {
     height: 17px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -40px;
-}
-
-#nav ul {
-    list-style: none;
+    /* margin-top: 45px; */
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 #nav li {
     display: inline;
 }
 
+.nav {
+    display: inline-block;
+    font-size: 15pt;
+    font-family: 'Source Sans Pro';
+    color: #9f9a96;
+    line-height: 15pt;
+    text-align: center;
+}
+
+.nav:hover {
+    font-weight: bold;
+}
+
 .nav-item {
-    background-repeat: no-repeat;
-    height: 54px;
-    width: 170px;
     display: inline-block;
 }
 
+.active-nav {
+    /* text-decoration: underline; */
+    /* text-decoration-color: #736f89; */
+    font-weight: bold;
+    border-bottom: 2px solid #736f89;
+}
+
 #nav-item1 {
-    background-image: url('Navigation/Home/Home_ruhe.png');
-    background-size: 75px;
-    width: 75px;
-    margin-right: 15px;
+    width: 58px;
+}
+
+#nav-item1a {
+    width: 65px;
+}
+
+#nav-item2a {
+    width: 158px;
 }
 
 #nav-item2 {
-    background-image: url('Navigation/Wirueberuns/Wirueberuns_ruhe.png');
-    background-size: 165px;
-    width: 165px;
-    margin-right: 15px;
+    width: 120px;
+}
+
+#nav-item3a {
+    width: 102px;
 }
 
 #nav-item3 {
-    background-image: url('Navigation/Produkte/Produkte_ruhe.png');
-    background-size: 105px;
-    width: 105px;
-    margin-right: 15px;
+    width: 88px;
+}
+
+#nav-item4a {
+    width: 138px;
 }
 
 #nav-item4 {
-    background-image: url('Navigation/Kontakt/Kontakt_ruhe.png');
-    background-size: 95px;
-    width: 95px;
-    margin-right: 15px;
+    width: 78px;
+}
+
+#nav-item5a {
+    width: 128px;
 }
 
 #nav-item5 {
-    background-image: url('Navigation/Impressum/Impressum_ruhe.png');
-    background-size: 140px;
-    width: 140px;
-    margin-right: 15px;
+    width: 105px;
 }
 
 #preload {
