--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -1,9 +1,9 @@
-body {
-    overflow: hidden;
+body, html {
+    overflow-x: hidden;
+    overflow-y: hidden;
     background-color: white;
     background-repeat: repeat;
     background-position: 50%;
-    height: 100%;
     width: 100%;
     min-width: 900px;
     background-image: linear-gradient(bottom, rgb(114,111,135) 0%, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
@@ -16,9 +16,9 @@ body {
 	left bottom,
 	left top,
 	color-stop(0, rgb(114,111,135)),
-	color-stop(0.25, rgb(186,177,194)),
-        color-stop(0.50, rgb(240,240,240)),
-	color-stop(0.60, rgb(255,255,255)));
+	color-stop(0.35, rgb(186,177,194)),
+        color-stop(0.60, rgb(240,240,240)),
+	color-stop(0.70, rgb(255,255,255)));
 }
 
 #logo {
@@ -124,23 +124,29 @@ body {
 #products {
     position: absolute;
     width: 1000px;
-    height: 330px;
     left: 50%;
     margin-left: -500px;
 }
 
-.kreis {
+.kreis, .dummy {
     position: absolute;
-    background-image: url('Produkte/Kreis_ruhe.png');
     background-repeat: no-repeat;
     background-size: 210px;
     width: 210px;
     height: 210px;
-    z-index: 1000;
+    z-index: 10;
 }
+
+.kreis {
+    background-image: url('Produkte/Kreis_aktiv.png');
+}
+
+.dummy {
+    background-image: url('Produkte/Kreis_ruhe.png');
+}
+
 #kreis1 {
     left: 7.5%;
-    /* background-image: url('Produkte/Kreis_aktiv.png'); */
 }
 
 #kreis2 {
@@ -158,11 +164,72 @@ body {
     width: 150px;
     height: 150px;
     margin: 30px 30px;
-    z-index: 10;
+    z-index: 100;
+    transition: transform 0.5s ease-out;
+    -webkit-transition: -webkit-transform 0.5s ease-out;
+    -moz-transition: -moz-transform 0.5s ease-out;
+    -ms-transition: -ms-transform 0.5s ease-out;
+    -o-transition: -o-transform 0.5s ease-out;
+    -webkit-transform: scale(0.5,0.5);
+    -webkit-transform-origin: 50% 50%;
+}
+
+.product-hover {
+    transform: scale(1,1);
+    transform-origin: 50% 50%;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    -moz-transform-origin: 50% 50%;
+    -o-transform-origin: 50% 50%;
+    -ms-transform: scale(1,1); /* IE 9 */
+    -moz-transform: scale(1,1); /* Firefox */
+    -webkit-transform: scale(1,1); /* Safari and Chrome */
+    -o-transform: scale(1,1); /* Opera */
+    border-radius: 90px;
+    border-color: grey;
+    /* border-collapse: collapse; */
+    box-shadow: 2px 2px 5px grey,
+               -2px 3px 5px grey,
+               2px -2px 5px grey,
+               -2px -2px 5px grey;
 }
 
 #alge {
     background-image: url('Produkte/Alge.png');
+}
+
+.product-frame {
+    margin-top: -25px;
+    left: 50%;
+    margin-left: -450px;
+    width: 900px;
+    position: absolute;
+    background-color: rgba(255,255,255,0.4);
+    display: none;
+    box-shadow: 4px 4px 4px grey,
+               -4px 4px 4px lightgrey,
+                4px -4px 4px lightgrey,
+               -4px -4px 4px lightgrey;
+    box-shadow-opacity: 0.5;
+    z-index: 100;
+}
+
+.product-title {
+    width: 100%;
+    text-align: center;
+    font-size: 16pt;
+    font-family: 'Source Sans Pro';
+    color: #323232;
+}
+
+.product-text {
+    position: relative;
+    width: 50%;
+    left: 45%;
+    text-align: left;
+    font-size: 12pt;
+    font-family: 'Source Sans Pro';
+    color: #323232;
 }
 
 #auster {
@@ -171,6 +238,34 @@ body {
 
 #salz {
     background-image: url('Produkte/Salz.png');
+}
+
+.product-image, product-image {
+    left: 5%;
+    position: absolute;
+    display: block;
+}
+
+#product-image1 {
+    margin-top: -500px;
+}
+
+#product-image2 {
+    margin-top: -250px;
+}
+
+.image-alge1 {
+    background-image: url('Produkte/Unterseiten/Elemente/Alge/alge_bild.png');
+    background-size: 300px;
+    width: 300px;
+    height: 200px;
+}
+
+.image-alge2 {
+    background-image: url('Produkte/Unterseiten/Elemente/Alge/alge_packshot.png');
+    background-size: 300px;
+    width: 300px;
+    height: 200px;
 }
 
 #impressum {
@@ -189,7 +284,7 @@ body {
     height: 100%;
     position: absolute;
     font-family: 'Source Sans Pro';
-    color: #323232;
+    color: #9f9a96;
     font-size: 15pt;
     text-align: left;
 }
