Add missing files, remove redundant files and change names style and index

--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -249,7 +249,7 @@ body {
 }
 
 #auster {
-    background-image: url('Produkte/Auster.psd');
+    background-image: url('Produkte/Auster.png');
 }
 
 #salz {
