--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -41,7 +41,7 @@ body {
 #content {
     position: relative;
     width: 500%;
-    height: 100%;
+    height: 900px;
 }
 
 
@@ -374,24 +374,25 @@ body {
 .nav {
     display: inline-block;
     font-size: 15pt;
-    font-family: 'Source Sans Pro';
+    font-family:"HelveticaNeue-Ultralight";
     color: #9f9a96;
     line-height: 15pt;
     text-align: center;
 }
 
 .nav:hover {
-    font-weight: bold;
+    font-family:"HelveticaNeue";
 }
 
 .nav-item {
     display: inline-block;
+    cursor: default;
 }
 
 .active-nav {
     /* text-decoration: underline; */
     /* text-decoration-color: #736f89; */
-    font-weight: bold;
+    font-family:"HelveticaNeue";
     border-bottom: 2px solid #736f89;
 }
 
