--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -44,7 +44,6 @@ body {
     height: 900px;
 }
 
-
 #home-title {
     width: 900px;
     font-family: 'Source Sans Pro';
@@ -64,7 +63,6 @@ body {
     height: 260px;
     margin-top: 10px;
     z-index: 20;
-    /* display: inline; */
 }
 
 #slideshow {
@@ -102,6 +100,7 @@ body {
     height: 330px;
     left: 30%;
     margin-left: -450px;
+    margin-top: -50px;
     z-index: 21;
 }
 
@@ -203,10 +202,7 @@ body {
     border-radius: 90px;
     border-color: grey;
     /* border-collapse: collapse; */
-    box-shadow: 2px 2px 5px grey,
-               -2px 3px 5px grey,
-               2px -2px 5px grey,
-               -2px -2px 5px grey;
+    box-shadow: 0px 0px 5px 5px grey;
 }
 
 #alge {
@@ -221,10 +217,7 @@ body {
     position: absolute;
     background-color: rgba(255,255,255,0.4);
     display: none;
-    box-shadow: 4px 4px 4px grey,
-               -4px 4px 4px lightgrey,
-                4px -4px 4px lightgrey,
-               -4px -4px 4px lightgrey;
+    box-shadow: 0px 0px 10px 1px lightgrey;
     box-shadow-opacity: 0.5;
     z-index: 100;
 }
@@ -319,6 +312,7 @@ body {
     height: 330px;
     left: 90%;
     margin-left: -450px;
+    margin-top: -50px;
 }
 
 #impressum-info p {
@@ -339,7 +333,7 @@ body {
 }
 
 #impressum-text p {
-    font-size: 10pt;
+    font-size: 9pt;
 }
 
 #nav {
