--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -2,9 +2,11 @@ body {
     overflow-x: hidden;
     overflow-y: hidden;
     background-color: white;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-position: 50%;
     width: 100%;
+    /* height: 100%; */
+    background-attachment: fixed;
     min-width: 900px;
     background-image: linear-gradient(bottom, rgb(114,111,135) 0%, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
     background-image: -o-linear-gradient(bottom, rgb(114,111,135) 0%, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
