Add php-script for contact form, slow down navigation and select home as first navigation item on start

--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -346,6 +346,7 @@ body {
     top: 25%;
     display: block;
     width: 30%;
+    z-index:1000;
 }
 
 #contact-name, #contact-mail, #contact-msg {
