--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -51,6 +51,13 @@ body {
   src: local('Source Sans Pro Light'), local('SourceSansPro-Light'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGMVNtom4QlEDNJaqqqzqdSs.woff) format('woff');
 }
 
+@font-face {
+  font-family: 'Source Sans Pro Thick';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Source Sans Pro'), local('SourceSansPro'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v5/toadOcfmlt9b38dHJxOBGMVNtom4QlEDNJaqqqzqdSs.woff) format('woff');
+}
+
 #content {
     position: absolute;
     width: 500%;
@@ -160,7 +167,6 @@ body {
     width: 210px;
     height: 210px;
     z-index: 10;
-    -webkit-transform: translate2d(0);
 }
 
 .kreis {
@@ -195,10 +201,6 @@ body {
     z-index: 1;
 }
 
-/* .caption:hover { */
-/*     color: #253d6c; */
-/* } */
-
 .product {
     position: absolute;
     background-repeat: no-repeat;
@@ -207,15 +209,16 @@ body {
     height: 150px;
     margin: 30px 30px;
     z-index: 100;
-    transition: transform 0.5s ease-out;
-    -webkit-transition: -webkit-transform 0.5s ease-out;
-    -moz-transition: -moz-transform 0.5s ease-out;
-    -ms-transition: -ms-transform 0.5s ease-out;
-    -o-transition: -o-transform 0.5s ease-out;
-    -webkit-transform: scale(0.75,0.75);
-    -moz-transform: scale(0.75,0.75);
-    -ms-transform: scale(0.75,0.75);
-    -o-transform: scale(0.75,0.75);
+    border-spacing: 85px;
+    /* transition: transform 0.5s ease-out; */
+    /* -webkit-transition: -webkit-transform 0.5s ease-out; */
+    /* -moz-transition: -moz-transform 0.5s ease-out; */
+    /* -ms-transition: -ms-transform 0.5s ease-out; */
+    /* -o-transition: -o-transform 0.5s ease-out; */
+    -webkit-transform: scale(0.85,0.85);
+    -moz-transform: scale(0.85,0.85);
+    -ms-transform: scale(0.85,0.85);
+    -o-transform: scale(0.85,0.85);
     -webkit-transform-origin: 50% 50%;
     -ms-transform-origin: 50% 50%;
     -moz-transform-origin: 50% 50%;
@@ -223,21 +226,19 @@ body {
 }
 
 .product-hover {
-    transform: scale(1,1);
-    transform-origin: 50% 50%;
-    -webkit-transform-origin: 50% 50%;
-    -ms-transform-origin: 50% 50%;
-    -moz-transform-origin: 50% 50%;
-    -o-transform-origin: 50% 50%;
-    -ms-transform: scale(1,1); /* IE 9 */
-    -moz-transform: scale(1,1); /* Firefox */
-    -webkit-transform: scale(1,1); /* Safari and Chrome */
-    -o-transform: scale(1,1); /* Opera */
+    /* transform: scale(1,1); */
+    /* transform-origin: 50% 50%; */
+    /* -webkit-transform-origin: 50% 50%; */
+    /* -ms-transform-origin: 50% 50%; */
+    /* -moz-transform-origin: 50% 50%; */
+    /* -o-transform-origin: 50% 50%; */
+    /* -ms-transform: scale(1,1); /\* IE 9 *\/ */
+    /* -moz-transform: scale(1,1); /\* Firefox *\/ */
+    /* -webkit-transform: scale(1,1); /\* Safari and Chrome *\/ */
+    /* -o-transform: scale(1,1); /\* Opera *\/ */
     border-radius: 90px;
     border-color: grey;
-    /* border-collapse: collapse; */
     box-shadow: 0px 0px 5px 5px grey;
-    box-shadow-blend-mode: normal;
 }
 
 #alge {
@@ -456,7 +457,6 @@ body {
     color: #9f9a96;
     line-height: 15pt;
     text-align: center;
-    -webkit-transform: translate3d(0, 0, 0);
 }
 
 .nav:hover {
