--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -235,9 +235,13 @@ body {
     margin-top: 200px;
 }
 
+#auster-text {
+    font-size: 12pt;
+}
+
 .caption {
     font-family: 'HelveticaNeue';
-    font-size: 30px;
+    font-size: 15pt;
     color: #323232;
     text-align: center;
     z-index: 1;
@@ -735,28 +739,18 @@ label {
     width: 70px;
     height: 70px;
     position: absolute;
-    top: 75%;
-    left: 108%;
-}
-
-#about321 {
-    z-index: 950;
-    background-size: 120px;
-    width: 120px;
-    height: 120px;
-    position: absolute;
-    top: 10%;
-    left: 115%;
+    top: 15%;
+    left: 125%;
 }
 
 #about411 {
     z-index: 950;
-    background-size: 300px;
-    width: 300px;
+    background-size: 320px;
+    width: 320px;
     height: 300px;
     position: absolute;
-    bottom: -25%;
-    left: 170%;
+    bottom: -20%;
+    left: 208%;
 }
 
 #about111 {
@@ -765,8 +759,8 @@ label {
     width: 80px;
     height: 80px;
     position: absolute;
-    bottom: 6%;
-    left: 185%;
+    bottom: 8%;
+    left: 225%;
 }
 
 #products321 {
@@ -775,7 +769,7 @@ label {
     width: 120px;
     height: 120px;
     position: absolute;
-    top: 55%;
+    top: 45%;
     left: 210%;
 }
 
@@ -786,7 +780,7 @@ label {
     height: 70px;
     position: absolute;
     top: 65%;
-    left: 205%;
+    left: 180%;
 }
 
 #products521 {
@@ -806,7 +800,7 @@ label {
     height: 350px;
     position: absolute;
     bottom: -20%;
-    left: 270%;
+    left: 360%;
 }
 
 #contact421 {
@@ -816,7 +810,7 @@ label {
     height: 150px;
     position: absolute;
     top: 5%;
-    left: 325%;
+    left: 320%;
 }
 
 #contact721 {
@@ -835,8 +829,8 @@ label {
     width: 300px;
     height: 300px;
     position: absolute;
-    bottom: -25%;
-    left: 325%;
+    bottom: -20%;
+    left: 450%;
 }
 
 #contact621 {
@@ -846,7 +840,7 @@ label {
     height: 60px;
     position: absolute;
     top: 45%;
-    left: 380%;
+    left: 383%;
 }
 
 #contact622 {
@@ -856,7 +850,7 @@ label {
     height: 90px;
     position: absolute;
     top: 48%;
-    left: 375%;
+    left: 258%;
 }
 
 #contact711 {
@@ -889,15 +883,6 @@ label {
     left: 465%;
 }
 
-#impressum321 {
-    z-index: 950;
-    background-size: 70px;
-    width: 70px;
-    height: 70px;
-    position: absolute;
-    top: 15%;
-    left: 475%;
-}
 
 #impressum611 {
     z-index: 5;
@@ -906,7 +891,7 @@ label {
     height: 300px;
     position: absolute;
     bottom: -15%;
-    left: 480%;
+    left: 645%;
 }
 
 #preload {
