--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 #loading p {
-    font-family: 'HelveticaNeue';
+    font-family: 'HelveticaNeue',"Helvetica Neue";
     font-size: 20px;
     color: #323232;
     text-align: center;
@@ -236,7 +236,7 @@ body {
 }
 
 .caption {
-    font-family: 'HelveticaNeue';
+    font-family: 'HelveticaNeue', 'Helvetica Neue';
     font-size: 15pt;
     color: #323232;
     text-align: center;
@@ -252,11 +252,6 @@ body {
     margin: 30px 30px;
     z-index: 100;
     border-spacing: 85px;
-    /* transition: transform 0.5s ease-out; */
-    /* -webkit-transition: -webkit-transform 0.5s ease-out; */
-    /* -moz-transition: -moz-transform 0.5s ease-out; */
-    /* -ms-transition: -ms-transform 0.5s ease-out; */
-    /* -o-transition: -o-transform 0.5s ease-out; */
     -webkit-transform: scale(0.85,0.85);
     -moz-transform: scale(0.85,0.85);
     -ms-transform: scale(0.85,0.85);
@@ -268,16 +263,6 @@ body {
 }
 
 .product-hover {
-    /* transform: scale(1,1); */
-    /* transform-origin: 50% 50%; */
-    /* -webkit-transform-origin: 50% 50%; */
-    /* -ms-transform-origin: 50% 50%; */
-    /* -moz-transform-origin: 50% 50%; */
-    /* -o-transform-origin: 50% 50%; */
-    /* -ms-transform: scale(1,1); /\* IE 9 *\/ */
-    /* -moz-transform: scale(1,1); /\* Firefox *\/ */
-    /* -webkit-transform: scale(1,1); /\* Safari and Chrome *\/ */
-    /* -o-transform: scale(1,1); /\* Opera *\/ */
     border-radius: 90px;
     border-color: grey;
     box-shadow: 0px 0px 5px 5px grey;
@@ -439,23 +424,23 @@ body {
 }
 
 #mail-error, #name-error, #msg-error {
-    display: none; 
+    display: none;
+    width: auto;
+    position: absolute;
 }
 
 #name-error {
-    margin-left: -195px;
+    left: -195px;
     margin-right: 8px;
-    top: 18px;
 }
 
 #mail-error {
-    margin-left: -268px;
+    left: -268px;
     margin-right: 9px;
-    top: 18px;
 }
 
 #msg-error {
-    margin-left: -201px;
+    left: -201px;
     margin-right: 9px;
     position: absolute;
 }
@@ -487,6 +472,7 @@ label {
     background-color: lightgrey;
     color: grey;
     right: 0%;
+    top: 260px;
 }
 
 #impressum {
@@ -551,14 +537,23 @@ label {
 .nav {
     display: inline-block;
     font-size: 15pt;
-    font-family:"HelveticaNeue-UltraLight";
+    font-family:"HelveticaNeue-UltraLight", "Helvetica Neue-UltraLight"
+               , "HelveticaNeueUltraLight", "HelveticaNeue-UltraLight"
+               , "Helvetica Neue UltraLight", myHelveticaUltraLight;
     color: #9f9a96;
     line-height: 15pt;
     text-align: center;
 }
 
+@font-face {
+  font-family: myHelveticaUltraLight;
+  src: local("Helvetica Neue UltraLight"),
+       local("HelveticaNeue-UltraLight"),
+       local("HelveticaNeueUltraLight");
+}
+
 .nav:hover {
-    font-family:"HelveticaNeue";
+    font-family:"HelveticaNeue", "Helvetica Neue";
 }
 
 .nav-item {
@@ -569,7 +564,7 @@ label {
 .active-nav {
     /* text-decoration: underline; */
     /* text-decoration-color: #736f89; */
-    font-family:"HelveticaNeue";
+    font-family:"HelveticaNeue", "Helvetica Neue";
     border-bottom: 2px solid #736f89;
 }
 
