--- a/Amberpharm/style.css
+++ b/Amberpharm/style.css
@@ -14,6 +14,8 @@ body {
     background-image: -moz-linear-gradient(bottom, rgb(114,111,135) 0%, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
     background-image: -webkit-linear-gradient(bottom, rgb(114,111,135) 80px, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
     background-image: -ms-linear-gradient(bottom, rgb(114,111,135) 0%, rgb(186,177,194) 25%, rgb(255,255,255) 50%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#ffffff');
+    zoom: 1;
     background-image: -webkit-gradient(
 	linear,
 	left bottom,
@@ -44,7 +46,10 @@ body {
 
 .loading-img {
     background-image: url('loading_punkt.png');
-    background-size: 7px;
+    background-size: cover;
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='loading_punkt.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='loading_punkt.png', sizingMethod='scale')";
     width: 7px;
     height: 7px;
     position: relative;
@@ -56,7 +61,7 @@ body {
 }
 
 #loading1 {
-    margin-left: -22px;
+    margin-left: -21px;
 }
 
 #loading2 {
@@ -72,11 +77,15 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+    left: 0;
+    top: 0;
     display:none;
 }
 
 #fixed {
     position: fixed;
+    _position:absolute;
+    _top:expression(eval(document.body.scrollTop));
     width: 100%;
     background-color: white;
     z-index: 900;
@@ -87,12 +96,15 @@ body {
 
 #logo {
     background-image: url('Amberpharm-Logo.png');
+    background-image: none\9;
     background-repeat: no-repeat;
-    background-size: 150px;
+    background-size: cover;
     width: 150px;
     height: 180px;
     margin-left: auto;
     margin-right: auto;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Amberpharm-Logo.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Amberpharm-Logo.png', sizingMethod='scale')";
 } 
 
 @font-face {
@@ -106,6 +118,7 @@ body {
     position: absolute;
     width: 500%;
     margin-top: 250px;
+    margin-left: -3px;
 }
 
 #home-title {
@@ -134,7 +147,10 @@ body {
     margin-left: -450px;
     position: absolute;
     background-image: url('Startseite/Slideshow_Rahmen.png');
-    background-size: 900px;
+    background-size: cover;
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Startseite/Slideshow_Rahmen.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Startseite/Slideshow_Rahmen.png', sizingMethod='scale')";
     width: 900px;
     height: 250px;
 
@@ -157,7 +173,10 @@ body {
 #about-frame {
     position: absolute;
     background-image: url('Wir_ueber_uns/Wir-ueber-uns_Textrahmen.png');
-    background-size: 900px;
+    background-size: cover;
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Wir_ueber_uns/Wir-ueber-uns_Textrahmen.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Wir_ueber_uns/Wir-ueber-uns_Textrahmen.png', sizingMethod='scale')";
     width: 900px;
     height: 339px;
     left: 30%;
@@ -216,19 +235,30 @@ body {
 
 .kreis, .dummy {
     position: absolute;
+    top: 0;
+    left: 0;
     background-repeat: no-repeat;
-    background-size: 210px;
+    background-size: cover;
     width: 210px;
     height: 210px;
-    z-index: 10;
+    z-index: 12;
+    top:0;
 }
 
 .kreis {
     background-image: url('Produkte/Kreis_aktiv.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Kreis_aktiv.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Kreis_aktiv.png', sizingMethod='scale')";
 }
 
 .dummy {
     background-image: url('Produkte/Kreis_ruhe.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Kreis_ruhe.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Kreis_ruhe.png', sizingMethod='scale')";
+    z-index: 11;
+
 }
 
 #kreis1 {
@@ -252,17 +282,17 @@ body {
     font-size: 15pt;
     color: #323232;
     text-align: center;
-    z-index: 1;
+    z-index: 12;
 }
 
 .product {
     position: absolute;
     background-repeat: no-repeat;
-    background-size: 150px;
+    background-size: cover;
     width: 150px;
     height: 150px;
     margin: 30px 30px;
-    z-index: 100;
+    z-index: 12;
     border-spacing: 85px;
     -webkit-transform: scale(0.85,0.85);
     -moz-transform: scale(0.85,0.85);
@@ -272,6 +302,8 @@ body {
     -ms-transform-origin: 50% 50%;
     -moz-transform-origin: 50% 50%;
     -o-transform-origin: 50% 50%;
+    transform: scale(0.85,0.85);
+    transform-origin: 50% 50%;
 }
 
 .product-hover {
@@ -295,7 +327,10 @@ body {
 
 #back-button {
     background-image: url('Produkte/Unterseiten/backup_btn.png');
-    background-size: 187px;
+    background-size: cover;
+    background-image: none\9;
+    /* filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Unterseiten/backup_btn.png', sizingMethod='scale'); */
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Unterseiten/backup_btn.png', sizingMethod='scale')";
     width: 187px;
     height: 36px;
     top: -50px;
@@ -328,14 +363,23 @@ body {
 
 #alge {
     background-image: url('Produkte/Alge.png');
+    background-image: none\9;
+    /* filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Alge.png', sizingMethod='scale'); */
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Alge.png', sizingMethod='scale')";
 }
 
 #auster {
     background-image: url('Produkte/Auster.png');
+    background-image: none\9;
+    /* filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Auster.png', sizingMethod='scale'); */
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Auster.png', sizingMethod='scale')";
 }
 
 #salz {
     background-image: url('Produkte/Salz.png');
+    background-image: none\9;
+    /* filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Produkte/Salz.png', sizingMethod='scale'); */
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=Produkte/Salz.png', sizingMethod='scale')";
 }
 
 .product-image {
@@ -500,6 +544,12 @@ label {
     margin: 0;
 }
 
+#impressum-text {
+    overflow-y: scroll;
+    height: 300px;
+}
+
+
 #impressum-info, #impressum-text, #contact-info {
     position: absolute;
     font-family: 'Source Sans Pro';
@@ -511,18 +561,19 @@ label {
 
 #impressum-text {
     left: 35%;
-    margin-top: -40px;
+    margin-top: -20px;
 }
 
-#impressum-text p {
-    font-size: 9pt;
-}
+/* #impressum-text p { */
+/*     font-size: 12pt; */
+/* } */
 
 #nav {
     z-index: 2000;
     width: 610px;
     margin-top: 10px;
     margin: auto;
+    position: relative;
 }
 
 #nav ul {
@@ -533,18 +584,21 @@ label {
 #nav-line {
     background-image: url('Navigation/1_Navigation-Linie.png');
     background-repeat: no-repeat;
-    background-size: 900px;
+    background-size: 899px;
+    background-image: none\9;
+    /* filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Navigation/1_Navigation-Linie.png', sizingMethod='scale'); */
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Navigation/1_Navigation-Linie.png.png', sizingMethod='scale')";
     width: 900px;
     height: 17px;
     margin-left: auto;
     margin-right: auto;
-    /* margin-top: 45px; */
     padding-left: 5px;
     padding-right: 5px;
 }
 
-#nav li {
+#nav ul li {
     display: inline;
+    /* float: left; */
 }
 
 .nav {
@@ -627,58 +681,100 @@ label {
 
 .bubble11 {
     background-image: url('Bubbles/Bubbles/bubble1_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble1_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble1_1.png', sizingMethod='scale')";
 }
 
 .bubble12 {
     background-image: url('Bubbles/Bubbles/bubble1_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble1_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble1_2.png.png', sizingMethod='scale')";
 }
 
 .bubble21 {
     background-image: url('Bubbles/Bubbles/bubble2_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble2_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble2_1.png.png', sizingMethod='scale')";
 }
 
 .bubble22 {
     background-image: url('Bubbles/Bubbles/bubble2_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble2_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble2_2.png.png', sizingMethod='scale')";
 }
 
 .bubble31 {
     background-image: url('Bubbles/Bubbles/bubble3_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble3_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble3_1.png.png', sizingMethod='scale')";
 }
 
 .bubble32 {
     background-image: url('Bubbles/Bubbles/bubble3_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble3_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble3_2.png.png', sizingMethod='scale')";
 }
 
 .bubble41 {
     background-image: url('Bubbles/Bubbles/bubble4_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble4_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble4_1.png.png', sizingMethod='scale')";
 }
 
 .bubble42 {
     background-image: url('Bubbles/Bubbles/bubble4_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble4_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble4_2.png.png', sizingMethod='scale')";
 }
 
 .bubble51 {
     background-image: url('Bubbles/Bubbles/bubble5_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble5_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble5_1.png.png', sizingMethod='scale')";
 }
 
 .bubble52 {
     background-image: url('Bubbles/Bubbles/bubble5_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble5_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble5_2.png.png', sizingMethod='scale')";
 }
 
 .bubble61 {
     background-image: url('Bubbles/Bubbles/bubble6_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble6_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble6_1.png.png', sizingMethod='scale')";
 }
 
 .bubble62 {
     background-image: url('Bubbles/Bubbles/bubble6_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble6_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble6_2.png.png', sizingMethod='scale')";
 }
 
 .bubble71 {
     background-image: url('Bubbles/Bubbles/bubble7_1.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble7_1.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble7_1.png.png', sizingMethod='scale')";
 }
 
 .bubble72 {
     background-image: url('Bubbles/Bubbles/bubble7_2.png');
+    background-image: none\9;
+    filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble7_2.png', sizingMethod='scale');
+    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='Bubbles/Bubbles/bubble7_2.png.png', sizingMethod='scale')";
 }
 
 
